source/sass/component/_button.scss
/* ... */
// Only text
.#{$_}__basic {
    border: none;
    box-shadow: none;
    filter: tokens.get($_, "shadow");
    transition: transform 100ms ease-in-out;

    &:not(:disabled) {
        padding-left: 0;
        padding-right: 0;

        &:hover {
            opacity: .8;
        }
    }

    &--primary,
    &--primary .#{$_}__label {
        color: tokens.get($_, "color--primary");
    }

    &--secondary,
    &--secondary .#{$_}__label {
        color: tokens.get($_, "color--secondary");
    }

    &--default,
    &--deafult .#{$_}__label {
        color: tokens.get($_, "color-surface-contrast");
    }
}

// Background and border
.#{$_}__filled {
    will-change: filter;
    transition: filter 200ms ease-in-out;
    filter: tokens.get($_, "shadow");

    &--primary {
        background-color: tokens.get($_, "color--primary");
        color: tokens.get($_, "color--primary-contrast");

        .#{$_}__label {
            color: tokens.get($_, "color--primary-contrast");
        }
    }

    &--secondary {
        background-color: tokens.get($_, "color--secondary");
        color: tokens.get($_, "color--secondary-contrast");

        .#{$_}__label {
            color: tokens.get($_, "color--secondary-contrast");
        }
    }

    &--default,
    &--deafult {
        background-color: tokens.get($_, "color-surface");
        color: tokens.get($_, "color-surface-contrast");

        &:hover:after {
            background: tokens.get($_, "color-black") !important;
            opacity: .06 !important;
        }

        &:hover:active:after {
            opacity: .12 !important;
        }

        .#{$_}__label-text,
        .#{$_}__label-icon {
            color: tokens.get($_, "color-surface-contrast");
        }
    }

    &:after {
        background-color: transparent;
    }

    &:hover {
        filter: tokens.get($_, "shadow");

        &:after {
            background: tokens.get($_, "color-white");
            opacity: .24;
        }
    }

    &:hover:active {
        filter: tokens.get($_, "shadow");

        &:after {
            background: tokens.get($_, "color-black");
            opacity: .32;
        }

        .#{$_}__label {
            opacity: .8;
        }
    }
}

.#{$_}__outlined {
    border: clamp(
            1px,
            #{tokens.use($_, "border-width")},
            calc(var(--base) / 2)
        ) solid;

    &--primary {
        border-color: tokens.get($_, "color--primary");
        color: tokens.get($_, "color--primary");

        .#{$_}__label {
            color: tokens.get($_, "color--primary");
        }

        &:hover:after {
            background: tokens.get($_, "color--primary");
            opacity: .08;
        }

        &:active:after {
            background: tokens.get($_, "color--primary");
            opacity: .24;
        }
    }

    &--secondary {
        border-color: tokens.get($_, "color--secondary");
        color: tokens.get($_, "color--secondary");

        .#{$_}__label {
            color: tokens.get($_, "color--secondary");
        }

        &:hover:after {
            background: tokens.get($_, "color--secondary");
            opacity: .08;
        }

        &:active:after {
            background: tokens.get($_, "color--secondary");
            opacity: .24;
        }
    }

    &--default,
    &--deafult {
        border-color: tokens.get($_, "color-surface-contrast");
        color: tokens.get($_, "color-surface-contrast");
        .#{$_}__label {
            color: tokens.get($_, "color-surface-contrast");
        }
        &:hover:after,
        &:active:after {
            background: tokens.get($_, "color-black");
        }
    }

    &:hover:focus {
        .#{$_}__label {
            opacity: .8;
        }
    }
}
/* ... */

